--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -331,7 +331,7 @@
                   <td width="10%" style="font-weight:bold;" id="time_sort">签收时间 <i class="fa fa-angle-up" id="time_sort_label"></i></td>
                   <td width="9%" style="font-weight:bold;">业务信息</td>
                   <td width="10%" style="font-weight:bold;">人员信息</td>
-                  <td width="9%" style="font-weight:bold;">利润（元）</td>
+                  <td width="9%" style="font-weight:bold;">毛利（元）</td>
                   <td width="10%" style="font-weight:bold;">订单标签</td>
                 </tr>
                 </tbody>
@@ -1669,7 +1669,7 @@ Date.prototype.format=function(fmt) {
       var coupon="<strong>优惠券：</strong>"+coupon_org+"<br>";
       var cost="<strong>成本：</strong>"+cost_org+"<br>";
 
-      var profitcontent =rebate+coupon+cost+method;
+      var profitcontent = cost+method;
 
       layer.tips(profitcontent, '#'+profitid, {
           tips: [4, '#0FA6D8'], //还可配置颜色
